fix tables overflow, change style of tables list

--- a/src/styles/Storage-explorer.less
+++ b/src/styles/Storage-explorer.less
@@ -29,6 +29,10 @@
       justify-content: space-between;
       align-items: center;
     }
+
+    .storage-bucket-tables {
+      padding-left: 16px;
+    }
   }
 
   .storage-table-overview {
